Fixing layout issues.

--- a/app/scss/core/_color.scss
+++ b/app/scss/core/_color.scss
@@ -3,3 +3,6 @@
 $question-count-background: #595859;
 $icon-happy: #40d5bb;
 $icon-sad: #ff509e;
+
+$background-primary: #204348;
+$background-secondary: #dc518e;
