--- a/app/scss/elements/_h2.scss
+++ b/app/scss/elements/_h2.scss
@@ -1,8 +1,12 @@
 // Heading 2
 
-.h2 {
+%h2 {
   font-size: rem(72px);
   font-weight: bold;
   line-height: rem(88px);
   text-align: center;
+}
+
+.h2 {
+  @extend %h2;
 }
