--- a/app/scss/elements/_main.scss
+++ b/app/scss/elements/_main.scss
@@ -2,9 +2,7 @@
 
 .main {
   position: relative;
-  display: flex;
   height: 100%;
   margin-right: auto;
   margin-left: auto;
-  flex-wrap: wrap;
 }
